# mdbook-plugins

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  LICENSE.md  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: book.yml  ci.yml  publish-binaries.yml  publish.yml  pull-request.yml  release.yml  website.yml
book/: book.toml
book-example/: Cargo.toml
book-example/src/: app.rs  button.rs  main.rs
book/src/: SUMMARY.md  introduction.md  tabs.md  trunk.md
book/src/trunk/: README.md
book/templates/example/: Cargo.toml
book/templates/example/src/: app.rs
book/theme/: tabs.css
