[workspace]
members = ["book-example", "packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/mdbook-plugins"
version = "0.2.3"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
mdbook-core = "0.5.0"
mdbook-driver = "0.5.0"
mdbook-preprocessor = "0.5.0"
mdbook-renderer = "0.5.0"
pulldown-cmark = "0.13.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
test-log = "0.2.16"
