[package]
name = "book-example"
description = "Example for mdbook-trunk."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.0", features = ["csr"] }
log.workspace = true

[features]
default = ["button"]
button = []
